added some files and test